acm/namespaces/test/metrics-writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-writer
spec:
  selector:
    matchLabels:
      app: metrics-writer
  replicas: 2
  template:
    metadata:
      labels:
        app: metrics-writer
    spec:
      containers:
      - name: "metrics-writer-sha256-1"
        image: "europe-west1-docker.pkg.dev/jtg-db-client1/myrepo/metrics-writer@sha256:e1fc554e1d14c2c1f19af21f23da164956a5f846cf0354963adb4670ecc2b795"
        ports:
        - containerPort: 8080
      # only schedule pods on fl-pool nodes
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "fl-pool"
                operator: In
                values:
                - "true"
      # also tolerate the fl-pool taint
      tolerations:
      - key: "fl-pool"
        operator: "Equal"
        value: "true"
        effect: "NoExecute"

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-writer-service
  # labels:
  #   run: my-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: metrics-writer
