acm/namespaces/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio.io/rev: asm-1104-6
