acm/namespaces/test/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - ingressgateway
  http:
  - route:
    - destination:
        host: nginx-service
        port:
          number: 80
